<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="?attr/actionBarSize"
    tools:context="app.tsbhost.basher.riverbd.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingTop="10dp"
                android:text="@string/title_login"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/errorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/colorDefault"
                android:textSize="15dp"
                android:textStyle="normal" />



            <android.support.design.widget.TextInputLayout
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="User ID">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@null"
                    android:scrollbars="vertical"/>
            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@null"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="30dp"
                    android:text="@string/show"
                    android:textColor="@color/colorAccent" />

                <CheckBox
                    android:layout_marginTop="15dp"
                    android:id="@+id/showpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/buttonbottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/top_border"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:padding="5dp"
                    android:text="@string/title_login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/title_logNext"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/black_overlay" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="8"
                android:paddingLeft="10dp"
                android:text="@string/title_exPin"
                android:textAlignment="gravity"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/existingPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/title_clickHere"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
